[gd_scene load_steps=5 format=3 uid="uid://bobvdhwwqeoem"]

[ext_resource type="Script" path="res://Scripts/main_menu.gd" id="1_q7xtm"]
[ext_resource type="Theme" uid="uid://crosqd2uoimhi" path="res://Assets/theme_button.tres" id="2_ebpjs"]
[ext_resource type="Texture2D" uid="uid://cx2kdkmk8hhg6" path="res://Assets/Others/Goblin Escape - Title.png" id="2_wnruq"]
[ext_resource type="PackedScene" uid="uid://hvdtjmpwq6ji" path="res://UI/Buttons/button_keybind.tscn" id="4_0h3ha"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 2
script = ExtResource("1_q7xtm")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 109.0
offset_top = -68.0
offset_right = -123.0
offset_bottom = -41.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.21, 1.21)
texture = ExtResource("2_wnruq")
metadata/_edit_lock_ = true

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 131.0
offset_bottom = 649.0
color = Color(0.909804, 0.745098, 0.372549, 1)
metadata/_edit_lock_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -455.0
offset_top = 146.0
offset_right = -404.0
offset_bottom = 196.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(3, 3)
pivot_offset = Vector2(26, 26)
focus_mode = 2
theme = ExtResource("2_ebpjs")
alignment = 1

[node name="StartGame" type="MenuButton" parent="VBoxContainer"]
layout_mode = 2
focus_mode = 2
toggle_mode = false
text = "Start Game"
flat = false

[node name="Options" type="MenuButton" parent="VBoxContainer"]
layout_mode = 2
focus_mode = 2
toggle_mode = false
text = "Options"
flat = false

[node name="ExitGame" type="MenuButton" parent="VBoxContainer"]
layout_mode = 2
focus_mode = 2
toggle_mode = false
text = "Quit"
flat = false

[node name="OptionsMenu" type="TabContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 321.0
offset_top = 100.0
offset_right = -79.0
offset_bottom = -100.0
grow_horizontal = 2
grow_vertical = 2
current_tab = 0
tab_focus_mode = 0

[node name="Controls" type="TabBar" parent="OptionsMenu"]
layout_mode = 2
focus_mode = 0
metadata/_tab_index = 0

[node name="MarginContainer" type="MarginContainer" parent="OptionsMenu/Controls"]
layout_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 31.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="ScrollContainer" type="ScrollContainer" parent="OptionsMenu/Controls/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="OptionsMenu/Controls/MarginContainer/ScrollContainer"]
layout_mode = 2
theme_override_constants/separation = 48

[node name="ButtonKeybind" parent="OptionsMenu/Controls/MarginContainer/ScrollContainer/VBoxContainer" instance=ExtResource("4_0h3ha")]
layout_mode = 2
action_name = "up"

[node name="ButtonKeybind2" parent="OptionsMenu/Controls/MarginContainer/ScrollContainer/VBoxContainer" instance=ExtResource("4_0h3ha")]
layout_mode = 2
action_name = "down"

[node name="ButtonKeybind3" parent="OptionsMenu/Controls/MarginContainer/ScrollContainer/VBoxContainer" instance=ExtResource("4_0h3ha")]
layout_mode = 2
action_name = "left"

[node name="ButtonKeybind4" parent="OptionsMenu/Controls/MarginContainer/ScrollContainer/VBoxContainer" instance=ExtResource("4_0h3ha")]
layout_mode = 2
action_name = "right"

[node name="ButtonKeybind6" parent="OptionsMenu/Controls/MarginContainer/ScrollContainer/VBoxContainer" instance=ExtResource("4_0h3ha")]
layout_mode = 2
action_name = "attack"

[node name="ButtonKeybind7" parent="OptionsMenu/Controls/MarginContainer/ScrollContainer/VBoxContainer" instance=ExtResource("4_0h3ha")]
layout_mode = 2
action_name = "run"

[node name="ButtonKeybind8" parent="OptionsMenu/Controls/MarginContainer/ScrollContainer/VBoxContainer" instance=ExtResource("4_0h3ha")]
layout_mode = 2
action_name = "stance"

[connection signal="mouse_entered" from="VBoxContainer" to="." method="_on_v_box_container_mouse_entered"]
[connection signal="button_up" from="VBoxContainer/StartGame" to="." method="_on_start_game_button_up"]
[connection signal="mouse_entered" from="VBoxContainer/StartGame" to="." method="_on_start_game_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitGame" to="." method="_on_exit_game_pressed"]
